--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 28, 2024 12:59:13 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 11, 2024 09:47:18 AM</span></a>
 </li>
 </ul>
 </div>
@@ -87,7 +87,7 @@
           <div class="test-detail">
             <p class="name">LoginErrorValidation</p>
             <p class="text-sm">
-              <span>12:59:18 PM</span> / <span>00:00:00:000</span>
+              <span>9:47:27 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -96,8 +96,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">LoginErrorValidation</h5>
-<span class='badge badge-success'>03.28.2024 12:59:18 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:18 PM</span>
+<span class='badge badge-success'>04.11.2024 9:47:27 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:47:27 AM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -114,7 +114,7 @@
           <div class="test-detail">
             <p class="name">LoginErrorValidation</p>
             <p class="text-sm">
-              <span>12:59:22 PM</span> / <span>00:00:01:188</span>
+              <span>9:47:46 AM</span> / <span>00:00:01:606</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -123,9 +123,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">LoginErrorValidation</h5>
-<span class='badge badge-success'>03.28.2024 12:59:22 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:23 PM</span>
-<span class='badge badge-default'>00:00:01:188</span>
+<span class='badge badge-success'>04.11.2024 9:47:46 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:47:48 AM</span>
+<span class='badge badge-default'>00:00:01:606</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -142,7 +142,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>12:59:23 PM</td>
+        <td>9:47:47 AM</td>
         <td>
           <textarea readonly class="code-block">java.lang.AssertionError: expected [Incorrect email or password.] but found [Incorrect email password.]
 	at org.testng.Assert.fail(Assert.java:111)
@@ -175,8 +175,13 @@
 	at org.testng.TestNG.runSuitesLocally(TestNG.java:1228)
 	at org.testng.TestNG.runSuites(TestNG.java:1134)
 	at org.testng.TestNG.run(TestNG.java:1101)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
+	at org.apache.maven.surefire.testng.TestNGExecutor.run(TestNGExecutor.java:308)
+	at org.apache.maven.surefire.testng.TestNGXmlTestSuite.execute(TestNGXmlTestSuite.java:71)
+	at org.apache.maven.surefire.testng.TestNGProvider.invoke(TestNGProvider.java:113)
+	at org.apache.maven.surefire.booter.ForkedBooter.runSuitesInProcess(ForkedBooter.java:385)
+	at org.apache.maven.surefire.booter.ForkedBooter.execute(ForkedBooter.java:162)
+	at org.apache.maven.surefire.booter.ForkedBooter.run(ForkedBooter.java:507)
+	at org.apache.maven.surefire.booter.ForkedBooter.main(ForkedBooter.java:495)
 </textarea>
           
         </td>
@@ -193,7 +198,7 @@
           <div class="test-detail">
             <p class="name">ProductErrorValidationTestCase</p>
             <p class="text-sm">
-              <span>12:59:27 PM</span> / <span>00:00:02:700</span>
+              <span>9:47:53 AM</span> / <span>00:00:02:728</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -202,9 +207,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">ProductErrorValidationTestCase</h5>
-<span class='badge badge-success'>03.28.2024 12:59:27 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:29 PM</span>
-<span class='badge badge-default'>00:00:02:700</span>
+<span class='badge badge-success'>04.11.2024 9:47:53 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:47:56 AM</span>
+<span class='badge badge-default'>00:00:02:728</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -217,7 +222,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:59:29 PM</td>
+        <td>9:47:56 AM</td>
         <td>
           Test Passed
         </td>
@@ -234,7 +239,7 @@
           <div class="test-detail">
             <p class="name">submitOrder</p>
             <p class="text-sm">
-              <span>12:59:33 PM</span> / <span>00:00:03:773</span>
+              <span>9:48:00 AM</span> / <span>00:00:03:771</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -243,9 +248,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">submitOrder</h5>
-<span class='badge badge-success'>03.28.2024 12:59:33 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:37 PM</span>
-<span class='badge badge-default'>00:00:03:773</span>
+<span class='badge badge-success'>04.11.2024 9:48:00 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:48:04 AM</span>
+<span class='badge badge-default'>00:00:03:771</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -258,7 +263,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:59:37 PM</td>
+        <td>9:48:04 AM</td>
         <td>
           Test Passed
         </td>
@@ -275,7 +280,7 @@
           <div class="test-detail">
             <p class="name">submitOrder</p>
             <p class="text-sm">
-              <span>12:59:40 PM</span> / <span>00:00:04:130</span>
+              <span>9:48:08 AM</span> / <span>00:00:03:992</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -284,9 +289,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">submitOrder</h5>
-<span class='badge badge-success'>03.28.2024 12:59:40 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:44 PM</span>
-<span class='badge badge-default'>00:00:04:130</span>
+<span class='badge badge-success'>04.11.2024 9:48:08 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:48:12 AM</span>
+<span class='badge badge-default'>00:00:03:992</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -299,7 +304,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:59:44 PM</td>
+        <td>9:48:12 AM</td>
         <td>
           Test Passed
         </td>
@@ -316,7 +321,7 @@
           <div class="test-detail">
             <p class="name">orderHistoryTest</p>
             <p class="text-sm">
-              <span>12:59:48 PM</span> / <span>00:00:00:889</span>
+              <span>9:48:15 AM</span> / <span>00:00:00:896</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -325,9 +330,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">orderHistoryTest</h5>
-<span class='badge badge-success'>03.28.2024 12:59:48 PM</span>
-<span class='badge badge-danger'>03.28.2024 12:59:49 PM</span>
-<span class='badge badge-default'>00:00:00:889</span>
+<span class='badge badge-success'>04.11.2024 9:48:15 AM</span>
+<span class='badge badge-danger'>04.11.2024 9:48:16 AM</span>
+<span class='badge badge-default'>00:00:00:896</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -340,7 +345,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:59:49 PM</td>
+        <td>9:48:16 AM</td>
         <td>
           Test Passed
         </td>
@@ -391,7 +396,7 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>12:59:22 PM</td>
+<td>09:47:46 AM</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>LoginErrorValidation</a>
 </td>
@@ -413,13 +418,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 28, 2024 12:59:13 PM</h3>
+<h3>Apr 11, 2024 09:47:18 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 28, 2024 12:59:49 PM</h3>
+<h3>Apr 11, 2024 09:48:16 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -489,7 +494,7 @@
 </div></div>
 <script>
 var timeline = {
-"LoginErrorValidation":0,"LoginErrorValidation":1.188,"ProductErrorValidationTestCase":2.7,"submitOrder":3.773,"submitOrder":4.13,"orderHistoryTest":0.889
+"LoginErrorValidation":0,"LoginErrorValidation":1.606,"ProductErrorValidationTestCase":2.728,"submitOrder":3.771,"submitOrder":3.992,"orderHistoryTest":0.896
 };
 </script>
 <div class="row">
